--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <style>
         /* Base Styles */
         :root {
-            --primary: #f8f5f2;
-            --secondary: #2c2c2c;
+            --primary: #f9f7f2; /* Cream background */
+            --secondary: #2c2c2c; /* Dark text for contrast */
             --accent: #d4a89c;
-            --light: #ffffff;
+            --light: #fffdf8; /* Slightly lighter cream */
             --gray: #e8e8e8;
             --transition: all 0.3s ease;
         }
@@ -32,17 +32,19 @@
             color: var(--secondary);
             background-color: var(--light);
             overflow-x: hidden;
+            font-weight: 500; /* Bolder text for better readability */
         }
 
         h1, h2, h3, h4 {
             font-family: 'Cormorant Garamond', serif;
-            font-weight: 400;
+            font-weight: 600; /* Bolder headings */
             line-height: 1.2;
             margin-bottom: 1rem;
         }
 
         p {
             margin-bottom: 1.5rem;
+            font-weight: 500; /* Bolder paragraph text */
         }
 
         a {
@@ -75,7 +77,7 @@
             color: var(--light);
             border: none;
             border-radius: 0;
-            font-weight: 400;
+            font-weight: 600; /* Bolder button text */
             cursor: pointer;
             transition: var(--transition);
             text-transform: uppercase;
@@ -112,6 +114,7 @@
             text-align: center;
             margin-bottom: 50px;
             position: relative;
+            font-weight: 700; /* Even bolder section titles */
         }
 
         .section-title:after {
@@ -121,7 +124,7 @@
             left: 50%;
             transform: translateX(-50%);
             width: 60px;
-            height: 1px;
+            height: 2px; /* Thicker line */
             background-color: var(--accent);
         }
 
@@ -147,7 +150,7 @@
         .logo {
             font-family: 'Cormorant Garamond', serif;
             font-size: 1.8rem;
-            font-weight: 600;
+            font-weight: 700; /* Bolder logo */
             color: var(--secondary);
             cursor: pointer;
         }
@@ -162,7 +165,7 @@
         }
 
         .nav-links a {
-            font-weight: 400;
+            font-weight: 600; /* Bolder navigation links */
             transition: var(--transition);
             position: relative;
             font-size: 0.9rem;
@@ -177,7 +180,7 @@
             bottom: -5px;
             left: 0;
             width: 0;
-            height: 1px;
+            height: 2px; /* Thicker underline */
             background-color: var(--secondary);
             transition: var(--transition);
         }
@@ -242,6 +245,7 @@
             letter-spacing: 1px;
             transition: var(--transition);
             cursor: pointer;
+            font-weight: 600; /* Bolder mobile menu text */
         }
 
         .mobile-dropdown a:hover {
@@ -280,7 +284,7 @@
         .hero-content h1 {
             font-size: 3.5rem;
             margin-bottom: 20px;
-            font-weight: 300;
+            font-weight: 600; /* Bolder hero title */
         }
 
         .hero-content p {
@@ -290,6 +294,7 @@
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            font-weight: 500; /* Bolder hero description */
         }
 
         /* About Page */
@@ -316,6 +321,7 @@
         .about-text h2 {
             font-size: 2.5rem;
             margin-bottom: 20px;
+            font-weight: 700; /* Bolder about heading */
         }
 
         /* Services Page - Auto Carousel for Desktop, Grid for Mobile */
@@ -349,6 +355,7 @@
         .service-card h3 {
             font-size: 1.5rem;
             margin-bottom: 15px;
+            font-weight: 700; /* Bolder service titles */
         }
 
         /* Services Auto Carousel for Desktop */
@@ -432,6 +439,7 @@
             font-family: inherit;
             transition: var(--transition);
             background-color: var(--primary);
+            font-weight: 500; /* Bolder form text */
         }
 
         .form-control:focus {
@@ -482,7 +490,7 @@
         .footer-logo {
             font-family: 'Cormorant Garamond', serif;
             font-size: 1.8rem;
-            font-weight: 600;
+            font-weight: 700; /* Bolder footer logo */
             margin-bottom: 20px;
             color: var(--light);
         }
@@ -515,6 +523,7 @@
             border-top: 1px solid rgba(255,255,255,0.1);
             font-size: 0.9rem;
             color: rgba(255,255,255,0.7);
+            font-weight: 500; /* Bolder footer text */
         }
 
         /* Cursor styles for interactive elements */
