--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 NatiNails. All rights reserved.</p>
+                <p>&copy; 2025 NatiNails. Swiftsite. All rights reserved.</p>
             </div>
         </div>
     </footer>
