--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <div class="footer-logo">NatiNails</div>
-                    <p>Professional nail services in Spring, TX. Bringing quality by your favorite nail tech!.</p>
+                    <p>Professional nail services in Spring, TX. Bringing quality by your favorite nail tech!</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
