--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
     <!-- Hero Section with Video Background -->
     <section id="hero" class="hero-section">
         <video class="hero-video" autoplay muted loop playsinline>
-            <source src="natinails.mp4" type="video/mp4">
+            <source src="natinails2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-overlay"></div>
